--- a/fibonacci-circom/package.json
+++ b/fibonacci-circom/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "compile": "circom --O1 --prime goldilocks --r1cs --wasm --sym -o build circuits/fibonacci.circom",
-    "witnesscomputation": "snarkjs wc build/fibonacci_js/fibonacci.wasm src/input.json build/witness.wtns",
+    "witnesscomputation": "snarkjs wc build/fibonacci_js/fibonacci.wasm src/input.json build/fibonacci.wtns",
     "circom2pil": "node node_modules/pil-stark/src/main_plonksetup.js -r build/fibonacci.r1cs -p build/fibonacci.pil -c build/fibonacci.const -e build/fibonacci.exec",
-    "pil_exec": "node node_modules/pil-stark/src/main_plonkexec.js -w build/witness.wtns -p build/fibonacci.pil -e build/fibonacci.exec -m build/fibonacci.commit",
+    "pil_exec": "node node_modules/pil-stark/src/main_plonkexec.js -w build/fibonacci.wtns -p build/fibonacci.pil -e build/fibonacci.exec -m build/fibonacci.commit",
     "pil_verify": "node node_modules/pilcom/src/main_pilverifier.js build/fibonacci.commit -p build/fibonacci.pil -c build/fibonacci.const",
     "starksetup": "node node_modules/pil-stark/src/main_buildconsttree.js -c build/fibonacci.const -p build/fibonacci.pil -s src/fibonacci.starkstruct.json -t build/fibonacci.consttree -v build/fibonacci.verkey.json",
     "starkprove": "node node_modules/pil-stark/src/main_prover.js -m build/fibonacci.commit -c build/fibonacci.const -t build/fibonacci.consttree -p build/fibonacci.pil -s src/fibonacci.starkstruct.json -o build/proof.json -z build/proof.zkin.json -b build/public.json --proverAddr 0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
