--- a/fibonacci-circom/package.json
+++ b/fibonacci-circom/package.json
@@ -19,10 +19,12 @@
   "author": "Héctor Masip Ardevol",
   "license": "ISC",
   "dependencies": {
-    "chai": "^4.3.6",
     "pil-stark": "^0.0.25",
-    "pilcom": "^0.0.18",
+    "pilcom": "^0.0.18"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
     "tmp-promise": "^3.0.3",
-    "yargs": "^17.5.1"
+    "yargs": "^17.6.0"
   }
 }
