Improving the STARK from circom example

--- a/PIL-SNARK/package.json
+++ b/PIL-SNARK/package.json
@@ -4,8 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "buildconst": "node src/main_buildconst.js -o build/fibonacci.const.bin",
+    "buildcommit": "node src/main_buildcommit.js -i src/input.json -o build/fibonacci.commit.bin",
+    "starksetup": "node node_modules/pil-stark/src/main_buildconsttree.js -c build/fibonacci.const.bin -p src/fibonacci.pil -s src/starkstruct.json -t build/fibonacci.consttree.bin -v build/fibonacci.verkey.json",
+    "pil2circom": "node node_modules/pil-stark/src/main_pil2circom.js -p src/fibonacci.pil -s src/starkstruct.json -v build/fibonacci.verkey.json -o build/fibonacci.circom",
+    "circuitcompile": "circom build/fibonacci.circom --r1cs --wasm --sym -l node_modules/pil-stark/circuits.bn128 -l node_modules/circomlib/circuits -o build",
+    "witnesscomputation": "snarkjs wc build/verifier_js/verifier.wasm build/proof.zkin.json build/verifier.wtns",
+    "plonksetup": "snarkjs pks build/fibonacci.r1cs build/powersOfTau.ptau build/fibonacci.zkey",
+    "plonkvk": "snarkjs zkev build/fibonacci.zkey build/fibonacci-vk.json",
+    "plonkproof": "snarkjs pkp build/fibonacci.zkey build/fibonacci.wtns build/fibonacci-proof.json build/fibonacci-public.json",
+    "plonkverify": "snarkjs pkv build/fibonacci-vk.json build/fibonacci-public.json build/fibonacci-proof.json"
   },
   "author": "Héctor Masip Ardevol",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "pil-stark": "https://github.com/0xPolygonHermez/pil-stark.git#fix/const-global-l"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "tmp-promise": "^3.0.3",
+    "yargs": "^17.6.0"
+  }
 }
