--- a/circom-STARK/package.json
+++ b/circom-STARK/package.json
@@ -16,7 +16,7 @@
   "author": "Héctor Masip Ardevol",
   "license": "ISC",
   "dependencies": {
-    "pil-stark": "https://github.com/0xPolygonHermez/pil-stark.git#fix/const-global-l"
+    "pil-stark": "^0.0.27"
   },
   "devDependencies": {
     "chai": "^4.3.6",
