--- a/SN-ST/package.json
+++ b/SN-ST/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "circuitcompile1": "circom --O1 --prime goldilocks --r1cs --wasm --sym -o build src/fibonacci.circom",
+    "circuitcompile1": "mkdir -p build && circom --O1 --prime goldilocks --r1cs --wasm --sym -o build src/fibonacci.circom",
     "witnesscomputation1": "snarkjs wc build/fibonacci_js/fibonacci.wasm src/input.json build/fibonacci.wtns",
     "circom2pil_const": "node node_modules/pil-stark/src/main_plonksetup.js -r build/fibonacci.r1cs -p build/fibonacci.pil -c build/fibonacci.const -e build/fibonacci.exec",
     "pilexec_commit": "node node_modules/pil-stark/src/main_plonkexec.js -w build/fibonacci.wtns -p build/fibonacci.pil -e build/fibonacci.exec -m build/fibonacci.commit",
