--- a/circom-STARK/package.json
+++ b/circom-STARK/package.json
@@ -6,17 +6,18 @@
   "scripts": {
     "circuitcompile": "mkdir -p build && circom src/fibonacci.circom --O1 --prime goldilocks --r1cs --wasm --sym -o build/",
     "witnesscomputation": "snarkjs wc build/fibonacci_js/fibonacci.wasm src/input.json build/fibonacci.wtns",
-    "circom2pil_const": "node node_modules/pil-stark/src/main_plonksetup.js -r build/fibonacci.r1cs -p build/fibonacci.pil -e build/fibonacci.exec -c build/fibonacci.const",
-    "pilexec_commit": "node node_modules/pil-stark/src/main_plonkexec.js -w build/fibonacci.wtns -p build/fibonacci.pil -e build/fibonacci.exec -m build/fibonacci.commit",
+    "circom2pil": "node node_modules/pil-stark/src/main_plonksetup.js -r build/fibonacci.r1cs -p build/fibonacci.pil -e build/fibonacci.exec -c build/fibonacci.const",
+    "generatecommit": "node node_modules/pil-stark/src/main_plonkexec.js -w build/fibonacci.wtns -p build/fibonacci.pil -e build/fibonacci.exec -m build/fibonacci.commit",
     "pilverify": "node node_modules/pilcom/src/main_pilverifier.js build/fibonacci.commit -p build/fibonacci.pil -c build/fibonacci.const",
-    "starksetup": "node node_modules/pil-stark/src/main_buildconsttree.js -c build/fibonacci.const -p build/fibonacci.pil -s src/starkstruct.json -t build/fibonacci.consttree -v build/fibonacci.verkey.json",
-    "starkprove": "node node_modules/pil-stark/src/main_prover.js -m build/fibonacci.commit -c build/fibonacci.const -t build/fibonacci.consttree -p build/fibonacci.pil -s src/starkstruct.json -o build/fibonacci-proof.json -z build/fibonacci-proof.zkin.json -b build/fibonacci-public.json",
-    "starkverify": "node node_modules/pil-stark/src/main_verifier.js -p build/fibonacci.pil -s src/starkstruct.json -v build/fibonacci.verkey.json -o build/fibonacci-proof.json -b build/fibonacci-public.json"
+    "buildstarkinfo": "node node_modules/pil-stark/src/main_genstarkinfo.js -p build/fibonacci.pil -s src/starkstruct.json -i build/starkinfo.json",
+    "buildconstanttree": "node node_modules/pil-stark/src/main_buildconsttree.js -c build/fibonacci.const -p build/fibonacci.pil -s src/starkstruct.json -t build/fibonacci.consttree -v build/fibonacci.verkey.json",
+    "starkprove": "node node_modules/pil-stark/src/main_prover.js -m build/fibonacci.commit -c build/fibonacci.const -t build/fibonacci.consttree -p build/fibonacci.pil -s build/starkinfo.json -o build/fibonacci.proof.json -z build/fibonacci.zkin.json -b build/fibonacci.public.json",
+    "starkverify": "node node_modules/pil-stark/src/main_verifier.js -p build/fibonacci.pil -s build/starkinfo.json -v build/fibonacci.verkey.json -o build/fibonacci.proof.json -b build/fibonacci.public.json"
   },
   "author": "Héctor Masip Ardevol",
   "license": "ISC",
   "dependencies": {
-    "pil-stark": "^0.0.27"
+    "pil-stark": "^0.0.48"
   },
   "devDependencies": {
     "chai": "^4.3.6",
