--- a/sm-SNARK/package.json
+++ b/sm-SNARK/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pil-snark",
+  "name": "sm-snark",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
@@ -18,7 +18,7 @@
   "author": "Héctor Masip Ardevol",
   "license": "ISC",
   "dependencies": {
-    "pil-stark": "^0.0.27"
+    "pil-stark": "^0.0.48"
   },
   "devDependencies": {
     "chai": "^4.3.6",
