--- a/sm-STARK/package.json
+++ b/sm-STARK/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pil-stark",
+  "name": "sm-stark",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
@@ -7,13 +7,13 @@
     "buildconst": "mkdir -p build && node src/main_buildconst.js -o build/fibonacci.const.bin",
     "buildcommit": "node src/main_buildcommit.js -i src/input.json -o build/fibonacci.commit.bin",
     "starksetup": "node node_modules/pil-stark/src/main_buildconsttree.js -c build/fibonacci.const.bin -p src/fibonacci.pil -s src/starkstruct.json -t build/fibonacci.consttree.bin -v build/fibonacci.verkey.json",
-    "starkprove": "node node_modules/pil-stark/src/main_prover.js -m build/fibonacci.commit.bin -c build/fibonacci.const.bin -t build/fibonacci.consttree.bin -p src/fibonacci.pil -s src/starkstruct.json -o build/fibonacci-proof.json -z build/fibonacci-proof.zkin.json -b build/fibonacci-public.json",
+    "starkprove": "node node_modules/pil-stark/src/main_prover.js -m build/fibonacci.commit.bin -c build/fibonacci.const.bin -t build/fibonacci.consttree.bin -p src/fibonacci.pil -s src/starkstruct.json -o build/fibonacci.proof.json -z build/fibonacci.zkin.json -b build/fibonacci.public.json",
     "starkverify": "node node_modules/pil-stark/src/main_verifier.js -p src/fibonacci.pil -s src/starkstruct.json -v build/fibonacci.verkey.json -o build/fibonacci-proof.json -b build/fibonacci-public.json"
   },
   "author": "Héctor Masip Ardevol",
   "license": "ISC",
   "dependencies": {
-    "pil-stark": "^0.0.27"
+    "pil-stark": "^0.0.48"
   },
   "devDependencies": {
     "chai": "^4.3.6",
