--- a/sm-SNARK/package.json
+++ b/sm-SNARK/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "buildconst": "mkdir -p build && node src/main_buildconst.js -o build/fibonacci.const.bin",
-    "buildcommit": "node src/main_buildcommit.js -i src/input.json -o build/fibonacci.commit.bin",
-    "starksetup": "node node_modules/pil-stark/src/main_buildconsttree.js -c build/fibonacci.const.bin -p src/fibonacci.pil -s src/starkstruct.json -t build/fibonacci.consttree.bin -v build/fibonacci.verkey.json",
-    "pil2circom": "node node_modules/pil-stark/src/main_pil2circom.js -p src/fibonacci.pil -s src/starkstruct.json -v build/fibonacci.verkey.json -o build/fibonacci.circom",
-    "circuitcompile": "circom build/fibonacci.circom --r1cs --wasm --sym -l node_modules/pil-stark/circuits.gl -o build",
-    "witnesscomputation": "snarkjs wc build/fibonacci_js/fibonacci.wasm src/input2.json build/fibonacci.wtns",
+    "buildconst": "mkdir -p build && node src/main_buildconst.js -o build/fibonacci.const",
+    "buildcommit": "node src/main_buildcommit.js -i src/input.json -o build/fibonacci.commit",
+    "pilverify": "node node_modules/pilcom/src/main_pilverifier.js build/fibonacci.commit -c build/fibonacci.const -p src/fibonacci.pil",
+    "buildstarkinfo": "node node_modules/pil-stark/src/main_genstarkinfo.js -p src/fibonacci.pil -s src/starkstruct.json -i build/starkinfo.json",
+    "buildconstanttree": "node node_modules/pil-stark/src/main_buildconsttree.js -c build/fibonacci.const -p src/fibonacci.pil -s src/starkstruct.json -t build/fibonacci.consttree -v build/fibonacci.verkey.json",
+    "sm2circuit": "node node_modules/pil-stark/src/main_pil2circom.js --verkeyInput -p src/fibonacci.pil -s build/starkinfo.json -v build/fibonacci.verkey.json -o build/fibonacci.circom",
+    "circuitcompile": "circom build/fibonacci.circom --r1cs --wasm --sym -o build -l node_modules/pil-stark/circuits.bn128 -l node_modules/circomlib/circuits",
+    "witnesscomputation": "snarkjs wc build/fibonacci_js/fibonacci.wasm src/input.json build/fibonacci.wtns",
+    "downloadptau": "wget https://hermez.s3-eu-west-1.amazonaws.com/powersOfTau28_hez_final_20.ptau -O build/powersOfTau.ptau",
     "plonksetup": "snarkjs pks build/fibonacci.r1cs build/powersOfTau.ptau build/fibonacci.zkey",
     "plonkvk": "snarkjs zkev build/fibonacci.zkey build/fibonacci-vk.json",
-    "plonkproof": "snarkjs pkp build/fibonacci.zkey build/fibonacci.wtns build/fibonacci-proof.json build/fibonacci-public.json",
-    "plonkverify": "snarkjs pkv build/fibonacci-vk.json build/fibonacci-public.json build/fibonacci-proof.json"
+    "plonkproof": "snarkjs pkp build/fibonacci.zkey build/fibonacci.wtns build/fibonacci.proof.json build/fibonacci.public.json",
+    "plonkverify": "snarkjs pkv build/fibonacci-vk.json build/fibonacci.public.json build/fibonacci.proof.json"
   },
   "author": "Héctor Masip Ardevol",
   "license": "ISC",
