--- a/circuit-ST-SN/package.json
+++ b/circuit-ST-SN/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "circom-sn-st",
+  "name": "circuit-sn-st",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compilecircom1": "mkdir -p build && circom --O1 --prime goldilocks --r1cs --sym --wasm --c --verbose src/fibonacci.circom -o build",
-    "witnesscomputation1": "snarkjs wc build/fibonacci_js/fibonacci.wasm src/input.json build/fibonacci.wtns",
-    "circuit2sm": "node node_modules/pil-stark/src/main_plonksetup.js -r build/fibonacci.r1cs -p build/fibonacci.pil -c build/fibonacci.const -e build/fibonacci.exec",
-    "buildcommit": "node node_modules/pil-stark/src/main_plonkexec.js -w build/fibonacci.wtns -p build/fibonacci.pil -e build/fibonacci.exec -m build/fibonacci.commit",
-    "pilverify": "node node_modules/pilcom/src/main_pilverifier.js build/fibonacci.commit -p build/fibonacci.pil -c build/fibonacci.const",
-    "buildstarkinfo": "node node_modules/pil-stark/src/main_genstarkinfo.js -p build/fibonacci.pil -s src/starkstruct.json -i build/starkinfo.json",
-    "buildconstanttree": "node node_modules/pil-stark/src/main_buildconsttree.js -c build/fibonacci.const -p build/fibonacci.pil -s src/starkstruct.json -t build/fibonacci.consttree -v build/fibonacci.verkey.json",
-    "starkprove": "node node_modules/pil-stark/src/main_prover.js -m build/fibonacci.commit -c build/fibonacci.const -t build/fibonacci.consttree -p build/fibonacci.pil -s build/starkinfo.json -o build/fibonacci.proof.json -z build/fibonacci.zkin.json -b build/fibonacci.public.json --proverAddr 0x7BAbF98C66454aF8a3C366F893f99EBa26a15c66",
-    "starkverify": "node node_modules/pil-stark/src/main_verifier.js -p build/fibonacci.pil -s build/starkinfo.json -v build/fibonacci.verkey.json -o build/fibonacci.proof.json -b build/fibonacci.public.json",
-    "sm2circuit": "node node_modules/pil-stark/src/main_pil2circom.js -p build/fibonacci.pil -s build/starkinfo.json -v build/fibonacci.verkey.json -o build/verifier.circom",
-    "circuitcompile2": "circom build/verifier.circom --r1cs --wasm --sym -l node_modules/pil-stark/circuits.bn128 -l node_modules/circomlib/circuits -o build",
-    "witnesscomputation2": "snarkjs wc build/verifier_js/verifier.wasm build/fibonacci.zkin.json build/verifier.wtns",
-    "downloadptau": "wget https://hermez.s3-eu-west-1.amazonaws.com/powersOfTau28_hez_final_15.ptau -O build/powersOfTau.ptau",
-    "plonksetup": "snarkjs pks build/verifier.r1cs build/powersOfTau.ptau build/fibonacci.zkey",
-    "plonkvk": "snarkjs zkev build/veirifer.zkey build/veirifer-vk.json",
-    "plonkproof": "snarkjs pkp build/veirifer.zkey build/veirifer.wtns build/veirifer.proof.json build/veirifer.public.json",
-    "plonkverify": "snarkjs pkv build/veirifer-vk.json build/veirifer.public.json build/veirifer.proof.json"
+    "stark:circuitcompile": "mkdir -p build && circom --O1 --prime goldilocks --r1cs --sym --wasm --c --verbose src/fibonacci.circom -o build",
+    "stark:witnesscomputation": "snarkjs wc build/fibonacci_js/fibonacci.wasm src/input.json build/fibonacci.wtns",
+    "stark:circuit2sm": "node node_modules/pil-stark/src/main_plonksetup.js -r build/fibonacci.r1cs -p build/fibonacci.pil -c build/fibonacci.const -e build/fibonacci.exec",
+    "stark:buildcommit": "node node_modules/pil-stark/src/main_plonkexec.js -w build/fibonacci.wtns -p build/fibonacci.pil -e build/fibonacci.exec -m build/fibonacci.commit",
+    "stark:pilverify": "node node_modules/pilcom/src/main_pilverifier.js build/fibonacci.commit -p build/fibonacci.pil -c build/fibonacci.const",
+    "stark:buildinfo": "node node_modules/pil-stark/src/main_genstarkinfo.js -p build/fibonacci.pil -s src/starkstruct.json -i build/starkinfo.json",
+    "stark:buildconstanttree": "node node_modules/pil-stark/src/main_buildconsttree.js -c build/fibonacci.const -p build/fibonacci.pil -s src/starkstruct.json -t build/fibonacci.consttree -v build/fibonacci.verkey.json",
+    "stark:prove": "node node_modules/pil-stark/src/main_prover.js -m build/fibonacci.commit -c build/fibonacci.const -t build/fibonacci.consttree -p build/fibonacci.pil -s build/starkinfo.json -o build/fibonacci.proof.json -z build/fibonacci.zkin.json -b build/fibonacci.public.json --proverAddr 0x7BAbF98C66454aF8a3C366F893f99EBa26a15c66",
+    "stark:verify": "node node_modules/pil-stark/src/main_verifier.js -p build/fibonacci.pil -s build/starkinfo.json -v build/fibonacci.verkey.json -o build/fibonacci.proof.json -b build/fibonacci.public.json",
+    
+    "verifier2circom": "node node_modules/pil-stark/src/main_pil2circom.js -p build/fibonacci.pil -s build/starkinfo.json -v build/fibonacci.verkey.json -o build/verifier.circom",
+    "circuitcompile": "circom build/verifier.circom --r1cs --wasm --sym -l node_modules/pil-stark/circuits.bn128 -l node_modules/circomlib/circuits -o build",
+    "witnesscomputation": "snarkjs wc build/verifier_js/verifier.wasm build/fibonacci.zkin.json build/verifier.wtns",
+    
+    "snark:downloadptau": "wget https://hermez.s3-eu-west-1.amazonaws.com/powersOfTau28_hez_final_15.ptau -O build/powersOfTau.ptau",
+    "snark:plonksetup": "snarkjs pks build/verifier.r1cs build/powersOfTau.ptau build/fibonacci.zkey",
+    "snark:plonkvk": "snarkjs zkev build/veirifer.zkey build/veirifer-vk.json",
+    "snark:plonkproof": "snarkjs pkp build/veirifer.zkey build/veirifer.wtns build/veirifer.proof.json build/veirifer.public.json",
+    "snark:plonkverify": "snarkjs pkv build/veirifer-vk.json build/veirifer.public.json build/veirifer.proof.json"
   },
   "author": "Héctor Masip Ardevol",
   "license": "ISC",
