--- a/sm-ST-ST/package.json
+++ b/sm-ST-ST/package.json
@@ -13,7 +13,7 @@
     "firststark:verify": "node node_modules/pil-stark/src/main_verifier.js -p src/fibonacci.pil -s build/starkinfo.json -v build/fibonacci.verkey.json -o build/fibonacci.proof.json -b build/fibonacci.public.json",
     
     "verifier2circom": "node node_modules/pil-stark/src/main_pil2circom.js -p src/fibonacci.pil -v build/fibonacci.verkey.json -s build/starkinfo.json -o build/verifier.circom",
-    "circuitcompile": "circom --O1 --prime goldilocks --r1cs --sym --wasm --c --verbose build/verifier.circom -l node_modules/pil-stark/circuits.gl -o build",
+    "circuitcompile": "circom --O1 --prime goldilocks --r1cs --wasm --verbose build/verifier.circom -l node_modules/pil-stark/circuits.gl -o build",
     "witnesscomputation": "snarkjs wc build/verifier_js/verifier.wasm build/fibonacci.zkin.json build/verifier.wtns",
     
     "secondstark:circuit2sm": "node node_modules/pil-stark/src/main_plonksetup.js -r build/verifier.r1cs -p build/verifier.pil -c build/verifier.const -e build/verifier.exec",
