--- a/circuit-STARK/package.json
+++ b/circuit-STARK/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "circuitcompile": "mkdir -p build && circom src/fibonacci.circom --O1 --prime goldilocks --r1cs --wasm --sym -o build/",
+    "circuitcompile": "mkdir -p build && circom src/fibonacci.circom --O1 --prime goldilocks --r1cs --wasm -o build",
     "witnesscomputation": "snarkjs wc build/fibonacci_js/fibonacci.wasm src/input.json build/fibonacci.wtns",
     "circuit2sm": "node node_modules/pil-stark/src/main_plonksetup.js -r build/fibonacci.r1cs -p build/fibonacci.pil -e build/fibonacci.exec -c build/fibonacci.const",
     "buildcommit": "node node_modules/pil-stark/src/main_plonkexec.js -w build/fibonacci.wtns -p build/fibonacci.pil -e build/fibonacci.exec -m build/fibonacci.commit",
