--- a/sm-ST-ST/package.json
+++ b/sm-ST-ST/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "firststark:buildconst": "mkdir -p build && node src/main_buildconst.js -o build/fibonacci.const",
     "firststark:buildcommit": "node src/main_buildcommit.js -i src/input.json -o build/fibonacci.commit",
-    "firststark:pilverify": "node node_modules/pilcom/src/main_pilverifier.js build/fibonacci.commit -c build/fibonacci.const -p src/fibonacci.pil",
+    "firststark:pilverify": "node node_modules/pilcom/src/main_pilverifier.js build/fibonacci.commit -p src/fibonacci.pil -c build/fibonacci.const",
     "firststark:buildinfo": "node node_modules/pil-stark/src/main_genstarkinfo.js -p src/fibonacci.pil -s src/fibonacci.starkstruct.json -i build/starkinfo.json",
     "firststark:buildconstanttree": "node node_modules/pil-stark/src/main_buildconsttree.js -c build/fibonacci.const -p src/fibonacci.pil -s src/fibonacci.starkstruct.json -t build/fibonacci.consttree -v build/fibonacci.verkey.json",
     "firststark:prove": "node node_modules/pil-stark/src/main_prover.js -m build/fibonacci.commit -c build/fibonacci.const -t build/fibonacci.consttree -p src/fibonacci.pil -s build/starkinfo.json -o build/fibonacci.proof.json -z build/fibonacci.zkin.json -b build/fibonacci.public.json",
     "firststark:verify": "node node_modules/pil-stark/src/main_verifier.js -p src/fibonacci.pil -s build/starkinfo.json -v build/fibonacci.verkey.json -o build/fibonacci.proof.json -b build/fibonacci.public.json",
     
-    "verifier2circom": "node node_modules/pil-stark/src/main_pil2circom.js -p src/fibonacci.pil -v build/fibonacci.verkey.json -s build/starkinfo.json -o build/verifier.circom",
+    "verifier2circom": "node node_modules/pil-stark/src/main_pil2circom.js -p src/fibonacci.pil -s build/starkinfo.json -v build/fibonacci.verkey.json -o build/verifier.circom",
     "circuitcompile": "circom --O1 --prime goldilocks --r1cs --wasm build/verifier.circom -l node_modules/pil-stark/circuits.gl -o build",
     "witnesscomputation": "snarkjs wc build/verifier_js/verifier.wasm build/fibonacci.zkin.json build/verifier.wtns",
     
